# lightweight_openpose_ros2

./: .gitignore  README.md
lightweight_openpose_ros2/: package.xml  setup.cfg  setup.py
lightweight_openpose_ros2/launch/: demo_launch.py
lightweight_openpose_ros2/lightweight_openpose_ros2/: lightweight_openpose_ros2.py  val.py
lightweight_openpose_ros2/lightweight_openpose_ros2/models/: with_mobilenet.py
lightweight_openpose_ros2/lightweight_openpose_ros2/modules/: pose.py
lor_interfaces/: CMakeLists.txt  package.xml
lor_interfaces/msg/: Person.msg  Person3D.msg  Persons3D.msg
lor_transformer/: CMakeLists.txt  package.xml
lor_transformer/include/lor_transformer/: lor_transformer.hpp
lor_transformer/src/: lor_transformer.cpp
